Made it not close when interacting

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -146,7 +146,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -310,7 +310,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -495,7 +495,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -632,7 +632,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -768,7 +768,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -889,7 +889,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -994,7 +994,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -1095,7 +1095,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -1213,7 +1213,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -1331,7 +1331,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -1442,7 +1442,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -1560,7 +1560,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -1701,7 +1701,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -1994,7 +1994,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -2267,7 +2267,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -2400,7 +2400,7 @@
           <span class="dropdown-arrow">▼</span>
         </div>
       </div>
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -2507,7 +2507,7 @@
           <span class="dropdown-arrow">▼</span>
         </div>
       </div>
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -2616,7 +2616,7 @@
           <span class="dropdown-arrow">▼</span>
         </div>
       </div>
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -2726,7 +2726,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -3666,7 +3666,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -4600,7 +4600,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -5560,7 +5560,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
@@ -6501,7 +6501,7 @@
         </div>
       </div>
 
-      <div class="test-case-content">
+      <div class="test-case-content" onclick="stopPropagation(event)">
         <div class="test-case-details">
           <div class="row">
             <div class="col-3">
